# white-space

./: .gitignore  Agent.md  README.md  goal.md  package-lock.json  package.json  plan.md  temp_db_prev.rs  temp_script.py  warnings.txt
.cursor/rules/: white-space-core.mdc
apps/desktop/ui/: package-lock.json  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/ui/src/: App.tsx  index.css  main.tsx
apps/desktop/ui/src/components/: BottomBar.tsx  FileRow.tsx  GaugeBar.tsx  application-modal.tsx  theme-provider.tsx
apps/desktop/ui/src/hooks/: use-mobile.ts  use-scan-events.ts  useGauge.ts
apps/desktop/ui/src/lib/: fileIcons.tsx  ipc.ts  notify.ts  os.ts
extension/: bg.js  manifest.json  popup.html  popup.js
src-tauri/: COMMANDS.md  Cargo.toml  DATABASE.md  GAUGE.md  LICENSING.md  OPS.md  SCANNER.md  SELECTOR.md  build.rs  tauri.conf.json
src-tauri/capabilities/: dialog.json  event.json  fs-watch.json  fs.json  shell.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: .gitkeep  V1__initial.sql  V6__staging_pipeline.sql
src-tauri/src/: commands.rs  db_example.rs  gauge.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: tests.rs
src-tauri/src/db/: database.rs  mod.rs  pool.rs
src-tauri/src/gauge/: tests.rs
src-tauri/src/licensing/: mod.rs  tests.rs
src-tauri/src/ops/: archive.rs  delete.rs  error.rs  mod.rs  space.rs  tests.rs  undo.rs
src-tauri/src/scanner/: active_project.rs  file_walker.rs  hash.rs  mod.rs  tests.rs
src-tauri/src/scanner/watcher/: mod.rs
src-tauri/src/selector/: mod.rs  scoring.rs  tests.rs
(+17 files in other folders)
