[package]
name = "white-space"
version = "0.1.0"
description = "A Tauri 2 + React/Vite + TypeScript application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
anyhow = "1.0"
walkdir = "2.5"
ignore = "0.4"
sha1 = "0.10"
once_cell = "1.19"
notify = "6.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.4", features = [] }
tauri-plugin-shell = "2.0.4"
tauri-plugin-fs = "2.0.4"
tauri-plugin-dialog = "2.0.4"
tauri-plugin-notification = "2.0.4"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
tempfile = "3.8"
windows = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

